--- a/css/timeline.css
+++ b/css/timeline.css
@@ -13,7 +13,7 @@
 	content: '';
 	position: absolute;
 	width: 3px;
-	background-color: #26c6da;
+	background-color: #8DD;
 	top: 0;
 	bottom: 0;
 	left: 50%;
@@ -34,7 +34,7 @@
 	width: 25px;
 	height: 25px;
 	right: -11px;
-	background-color: #26c6da;
+	background-color: #8DD;
 	top: 15px;
 	border-radius: 50%;
 	z-index: 1;
