--- a/css/timeline.css
+++ b/css/timeline.css
@@ -55,7 +55,7 @@
 	left: -14px;
   }
   
-  /* Media queries - Responsive timeline on screens less than 600px wide */
+  /* Responsive timeline on screens less than 600px wide */
   @media screen and (max-width: 600px) {
   
 	/* Place the timelime to the left */
